--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "src/index.js",
   "scripts": {
     "dev": "node --import=tsx --watch --env-file=.env src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "dist/index.js"
   },
   "dependencies": {
     "express": "^5.2.1"
